# src/main/java/me/josecomparotto/contabilidade_pessoal/model/enums/SentidoContabil.java
@@ -1,6 +1,6 @@
 package me.josecomparotto.contabilidade_pessoal.model.enums;
 
-public enum SentidoOperacao {
+public enum SentidoContabil {
     DEBITO,
     CREDITO
 }
